--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "las",
-  "version": "0.0.0",
+  "name": "ReservationServer",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "admin": "node ./bin/admin"
+    "start": "cross-env NODE_ENV=production node ./bin/www",
+    "admin": "node ./bin/admin",
+    "dev": "cross-env DEBUG=* NODE_ENV=development node  ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -19,5 +20,8 @@
     "morgan": "~1.9.1",
     "sqlite3": "^5.0.0",
     "stylus": "^0.54.8"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   }
 }
