--- a/config.yaml
+++ b/config.yaml
@@ -3,38 +3,34 @@ enableSignUp: true
 
 #公告
 announcement:
-  autoShow: false     #进入首页后自动展示
-  content: 暂无公告    #公告内容
+  autoShow: false      #进入首页后自动展示
+  content: 暂无公告     #公告内容
 
 #设备
 repository:
-  - ItemID: 1         #设备编号，从1开始的整数
-    Item: 设备1       #设备名称
-    ItemAdress: Lab   #设备地址(未启用)
+  - ItemID: 1             #设备编号，从1开始的整数
+    Item: 设备1           #设备名称
+    Description: 描述1    #设备说明(可选项，非必须)
   - ItemID: 2
     Item: 设备2
-    ItemAdress: Lab
+    Description: 描述2
   - ItemID: 3
     Item: 设备3
-    ItemAdress: Lab
+    Description: 描述3
   - ItemID: 4
     Item: 设备4
-    ItemAdress: Lab
   - ItemID: 5
     Item: 设备5
-    ItemAdress: Lab
   - ItemID: 6
     Item: 设备6
-    ItemAdress: Lab
+    Description: 描述6
   - ItemID: 7
     Item: 设备7
-    ItemAdress: Lab
+    Description: 描述7
   - ItemID: 8
     Item: 设备8
-    ItemAdress: Lab
   - ItemID: 9
     Item: 设备9
-    ItemAdress: Lab
   - ItemID: 10
     Item: 设备10
-    ItemAdress: Lab
+    Description: 描述10
