--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "cross-env NODE_ENV=production node ./bin/www",
     "admin": "node ./bin/admin",
     "refresh": "node ./bin/refresh && npm start",
-    "dev": "cross-env DEBUG=* NODE_ENV=development node  ./bin/www"
+    "dev": "cross-env NODE_ENV=development nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -23,6 +23,11 @@
     "stylus": "^0.54.8"
   },
   "devDependencies": {
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.6"
+  },
+  "nodemonConfig": { 
+    "ignore": "./public/",
+    "ext": "js json ejs yaml"
   }
 }
