--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
-  "name": "ReservationServer",
-  "version": "0.2.0",
+  "name": "ylide",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
-    "start": "gulp start",
-    "debug": "cross-env DEBUG=express:* gulp start",
-    "admin": "node ./bin/admin",
-    "refresh": "node ./bin/refresh && npm start",
-    "updateDB": "node ./bin/updateDB"
+    "start": "ts-node ./app.ts",
+    "dev": "nodemon --config nodemon.json",
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "connect-sqlite3": "^0.9.11",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "express-session": "^1.17.1",
-    "http-errors": "~1.6.3",
-    "js-yaml": "^3.14.0",
-    "log4js": "^6.3.0",
-    "sqlite3": "^5.0.0",
-    "stylus": "^0.54.8"
+    "@types/koa": "^2.13.4",
+    "@types/koa-json": "^2.0.20",
+    "@types/koa-router": "^7.4.4",
+    "admin-lte": "^3.1.0",
+    "jquery": "^3.6.0",
+    "koa": "^2.13.3",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0",
+    "koa-views": "^7.0.1",
+    "nunjucks": "^3.2.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "cross-env": "^7.0.2",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.5.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-stylus": "^2.7.0",
-    "gulp-uglify": "^3.0.2"
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-regular": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@types/bootstrap": "^5.1.6",
+    "@types/jquery": "^3.5.8",
+    "@types/koa-bodyparser": "^4.3.3",
+    "@types/koa-static": "^4.0.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.4.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
+    "exports-loader": "^3.1.0",
+    "expose-loader": "^3.1.0",
+    "mini-css-extract-plugin": "^2.4.3",
+    "nodemon": "^1.19.4",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.0",
+    "terser-webpack-plugin": "^5.2.4",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
+    "webpack": "^5.56.0",
+    "webpack-cli": "^4.8.0"
   }
 }
