--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
   "private": true,
   "scripts": {
     "start": "ts-node ./app.ts",
-    "dev": "nodemon --config nodemon.json",
+    "dev": "nodemon --config nodemon.json app.ts",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint app.ts --fix"
   },
   "dependencies": {
     "@types/koa": "^2.13.4",
     "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
+    "@types/sqlite3": "^3.1.8",
     "admin-lte": "^3.1.0",
+    "axios": "^0.24.0",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.3",
     "koa-bodyparser": "^4.3.0",
+    "koa-jwt": "^4.0.3",
     "koa-router": "^10.1.1",
     "koa-static": "^5.0.0",
     "koa-views": "^7.0.1",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
@@ -28,23 +37,27 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@types/bootstrap": "^5.1.6",
     "@types/jquery": "^3.5.8",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-static": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "exports-loader": "^3.1.0",
     "expose-loader": "^3.1.0",
     "mini-css-extract-plugin": "^2.4.3",
-    "nodemon": "^1.19.4",
+    "nodemon": "^2.0.15",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.0",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3",
-    "webpack": "^5.56.0",
-    "webpack-cli": "^4.8.0"
+    "typescript": "^4.4.3"
   }
 }
